# Bank

./: .gitattributes  .gitignore  CONFIGURACAO_SUPABASE.md  INSTALACAO.md  QUICKSTART_SUPABASE.md  README.md  SECURITY.md  SETUP.md  SUPABASE.md  build.gradle.kts  gradlew  settings.gradle.kts  supabase_schema.sql
.github/workflows/: build.yml
app/: build.gradle.kts  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_crypto.cpp  network_security.cpp
app/src/main/java/com/bancoapp/: BancoApplication.kt  MainActivity.kt
app/src/main/java/com/bancoapp/data/: BancoRepository.kt  Models.kt  SessionManager.kt
app/src/main/java/com/bancoapp/notifications/: NotificationHelper.kt
app/src/main/java/com/bancoapp/security/: NativeCrypto.kt  NetworkSecurity.kt
app/src/main/java/com/bancoapp/ui/screens/: HistoryScreen.kt  HomeScreen.kt  LoginScreen.kt  QRCodeDialog.kt  (+3 more)
app/src/main/java/com/bancoapp/utils/: QRCodeGenerator.kt
app/src/main/java/com/bancoapp/viewmodel/: AuthViewModel.kt  BankViewModel.kt
app/src/main/java/com/bancoseguro/app/: BancoSeguroApp.kt  MainActivity.kt
app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_foreground.xml  ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  network_security_config.xml
app/src/main/rust/: Cargo.toml  build.sh
app/src/main/rust/.cargo/: config.toml
app/src/main/rust/src/: lib.rs
(+23 files in other folders)
