[package]
name = "bancoseguro_native"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.21"
hex = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
